crates/ir/tests/ir/snapshots/main__ir__lower__ownership__match_borrow_scrutinee_ok.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__match_borrow_scrutinee_ok

type Payload = Open#0(~String) | Closed#1
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]

fn peek(v0: ~String) -> Int =
  42

fn drain(v1: ~Payload) -> Int =
  switch v1 {
    0 (v2: ~String) ->
      let v3: Int = call peek(v2)
      v3
    1 ->
      0
  }
