crates/ir/tests/ir/snapshots/main__ir__lower__ownership__match_guard_shared_access_ok.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__match_guard_shared_access_ok

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn len(v0: String) -> Int =
  1

fn test(v1: Int) -> Int =
  let v7: Bool = eq_int(v1, 0)
  if v7 {
    let_join v6(v5: Bool) =
      if v5 {
        10
      } else {
        0
      }
    in
    let v2: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
    let v3: Int = call len("hello")
    let v4: Bool = trait_call core/ord.Ord.lt(v2, 0, v3)
    jump v6(v4)
  } else {
    0
  }
