crates/ir/tests/ir/snapshots/main__ir__lower__ownership__match_peek_no_consume.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__match_peek_no_consume

type Choice = A#0 | B#1
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]

fn peek(v0: ~String) -> Choice =
  let v1: Choice = construct Choice::A#0()
  v1

fn consume(v2: ~String) -> String =
  ""

fn test(v3: ~String) -> String =
  let_join v7(v5: Int) =
    let v6: String = call consume(v3)
    v6
  in
  let v4: Choice = call peek(v3)
  switch v4 {
    0 ->
      jump v7(0)
    1 ->
      jump v7(0)
  }
